# minebrain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bot/: Cargo.toml
bot/src/: main.rs  observation.rs
bot/src/skills/: combat.rs  crafting.rs  end.rs  gathering.rs  mod.rs  navigation.rs  nether.rs  survival.rs
scripts/: start-all.sh  start-bot.sh  start-server.sh  train.sh
server/: ops.json  server.properties  spigot.yml
src/: bridge.py  curriculum.py  dashboard.py  env.py  evaluate.py  model.py  observations.py  skills.py  train.py
