[project]
name = "minebrain"
version = "0.1.0"
description = "Neural network that learns to play and beat Minecraft using PPO on Apple MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "websockets>=12.0",
    "rich>=13.0.0",
]

[project.scripts]
minebrain-train = "src.train:main"
minebrain-eval = "src.evaluate:main"
