[package]
name = "minebrain-bot"
version = "0.1.0"
edition = "2021"
description = "Azalea-based Minecraft bot server for MineBrain RL agent"

[dependencies]
azalea = "0.26.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
eyre = "0.6"
parking_lot = "0.12"
